--- a/src/topics/currency-converter/CurrencyConverter.css
+++ b/src/topics/currency-converter/CurrencyConverter.css
@@ -2,7 +2,7 @@
   max-width: 70%;
   margin: auto;
   background-color: gray;
-  padding: 1rem 2rem;
+  padding: 3rem 2rem 1rem;
   border-radius: 1rem;
 }
 
