--- a/src/topics/filter-category/FilterCategory.css
+++ b/src/topics/filter-category/FilterCategory.css
@@ -22,6 +22,8 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
   margin: 2rem auto;
+  height: 400px;
+  overflow: auto;
 }
 
 .category-item {
